# goa-travel-agent-ai

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  datapizza-ai.txt  main.py  pyproject.toml
goa_travel_agent/config/: settings.py
goa_travel_agent/src/agents/: discovery_agent.py  hotel_agent.py  planner_agent.py
goa_travel_agent/src/data_management/: data_loader.py  kaggle_downloader.py  preprocessor.py
goa_travel_agent/src/embeddings/: hybrid_embedder.py
goa_travel_agent/src/tools/: budget_calculator.py  hotel_search.py  itinerary_optimizer.py  places_search.py  tavily_verifier.py
goa_travel_agent/src/utils/: geo_utils.py  logger.py
goa_travel_agent/src/vector_db/: qdrant_manager.py  searcher.py
goa_travel_agent/ui/: app.py
goa_travel_agent/ui/components/: chat_interface.py  header.py  hotel_cards.py  places_grid.py  sidebar.py
goa_travel_agent/ui/styles/: custom.css
goa_travel_agent/ui/views/: chat.py  hotels.py  itinerary.py  places.py
screenshots/: README.md
